--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="text/javascript" src="../src/index.js"></script>
-  
+  <div id="root"></div>  
 </body>
 
 </html>
